k8s/troubleshooting-backup/simple-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statuspage-worker-fixed
  namespace: statuspage
  labels:
    app: statuspage
    component: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: statuspage
      component: worker-fixed
  template:
    metadata:
      labels:
        app: statuspage
        component: worker-fixed
    spec:
      containers:
      - name: worker
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/statuspage-app:latest
        command: ["python", "statuspage/manage.py", "shell"]
      imagePullSecrets:
      - name: regcred
