k8s/troubleshooting-backup/fixed-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: statuspage-fixed-nodeport
  namespace: statuspage
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30090
    protocol: TCP
  selector:
    app: statuspage
    component: web-fixed
