k8s/troubleshooting-backup/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statuspage-nodeport
  namespace: statuspage
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30080
    protocol: TCP
  selector:
    app: statuspage
    component: web
