k8s/troubleshooting-backup/static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statuspage-web-static
  namespace: statuspage
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: statuspage
    component: web-static
